# pacbio-variant-analysis-harness

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DOCUMENTATION_LINK_AUDIT.txt  GITHUB_PUBLISHING_INSTRUCTIONS.md  JOINT_SCALE_TEST_RESULTS.txt  LICENSE  Makefile  NETWORK_ISOLATION_TEST.txt  PHASE_3A0_2_IDENTITY_TEST_RESULTS.txt  PORTABILITY_SCAN.txt  PUBLIC_PACKAGE_AUDIT.txt  PUBLIC_RELEASE_AUDIT.txt  PYTEST_EXIT_VERIFICATION.txt  PYTEST_FULL_EXIT_VERIFICATION.txt  PYTEST_RESOLUTION_CHECK.txt  README.md  RELEASE_NOTES.md  REVIEW_MANIFEST.txt  ROADMAP.md  SCALE_TEST_RESULTS.txt  SECURITY.md  TEST_DURATION_REPORT.txt  TEST_RESULTS.txt  THIRD_PARTY_NOTICES.md  pyproject.toml
.github/: pull_request_template.md
configs/: apptainer_profile.example.yaml  deepsomatic_pacbio.example.yaml  deepvariant_current.example.yaml  deepvariant_legacy_1.3.example.yaml  docker_profile.example.yaml  integrated_somatic.example.yaml  joint_genotyping.example.yaml  local_profile.example.yaml  native_profile.example.yaml  pacbio_hifi_germline.example.yaml  severus_pacbio.example.yaml  slurm_profile.example.yaml  somatic_project.example.yaml
docs/: README.md  cohort_execution.md  cohort_manifest.md  cohort_reporting.md  cohort_status.md  configuration.md  deepsomatic_configuration.md  deepsomatic_containers.md  deepsomatic_failure_recovery.md  deepsomatic_models.md  deepsomatic_outputs.md  deepsomatic_overview.md  deepsomatic_provenance.md  deepsomatic_qc.md  deepsomatic_slurm.md  deepsomatic_storage.md  inputs.md  (+67 more)
(+290 files in other folders)
